Submit button overflow problem fixed

--- a/CSS/_footer.scss
+++ b/CSS/_footer.scss
@@ -66,5 +66,5 @@ textarea:hover{
     margin: 4px auto;
     text-align: center;
     border-radius: 5px;
-    margin-left: 85%;
+    margin-left: 10%;
 }
