--- a/CSS/style.css
+++ b/CSS/style.css
@@ -327,7 +327,7 @@ textarea:hover {
   margin: 4px auto;
   text-align: center;
   border-radius: 5px;
-  margin-left: 85%;
+  margin-left: 10%;
 }
 
 @media screen and (max-width: 850px) {
